--- a/src/index.css
+++ b/src/index.css
@@ -183,6 +183,9 @@ header h1 {
     font-size: 2.8rem;
     text-align: center;
 }
+.formulario input[type="number"].nuevo-presupuesto {
+    width: 100%;
+}
 
 .contenedor-presupuesto svg {
     width: 25rem;
